--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,22 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Mochiy Pop One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     background-color: #fce4ec; /* Rosa pastello */
     padding: 20px;
   }
   
   .container {
-    max-width: 600px;
+    max-width: 800px;
     margin: 0 auto;
-    background-color: #fff; /* Bianco */
+    background-color: #fff;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   h5 {
-    color: #ff69b4; /* Rosa intenso */
-    text-align: center;
+    color: #ff69b4;
     margin-bottom: 20px;
   }
   
@@ -25,17 +26,11 @@ body {
   }
   
   .li {
-    background-color: #fff; /* Bianco */
+    background-color: #fff;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
     position: relative;
-    overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .li:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   .li p {
@@ -43,36 +38,20 @@ body {
     color: #333;
   }
   
-  .i {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    cursor: pointer;
-  }
-  
   .add-task {
     margin-top: 20px;
-    display: flex;
-  }
-  
-  input {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
   }
   
   button {
     padding: 10px 20px;
     border: none;
-    background-color: #ff69b4; /* Rosa intenso */
-    color: #fff; /* Bianco */
+    background-color: #ff69b4;
+    color: #fff;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
   button:hover {
-    background-color: #ff94c2; /* Rosa più chiaro */
+    background-color: #ff94c2;
   }
